new custom theme set to default; auto-connect based on url; basic responsive layout

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
     <link href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css' rel='stylesheet'>
     <link href='/stylesheets/style.css' media='screen' rel='stylesheet' type='text/css'/>
     <link ng-href='/stylesheets/themes/{{theme}}/theme.css' media='screen' rel='stylesheet' type='text/css'/>
+    <style type="text/css">
+      div.config.ng-scope { display: none; }
+    </style>
   </head>
   <body ng-controller="MainCtrl">
     <!-- config overlay -->
